[gd_scene load_steps=5 format=3 uid="uid://c4y0bm8im4qh4"]

[ext_resource type="Script" path="res://Scripts/Settings.gd" id="1_fkcod"]
[ext_resource type="Theme" uid="uid://dtnljtx0kgc74" path="res://Styles/Toggle.tres" id="2_pb2un"]
[ext_resource type="Theme" uid="uid://h1n0lhl2erdg" path="res://Styles/Button.tres" id="3_pisyp"]

[sub_resource type="Theme" id="Theme_my3pc"]

[node name="SettingsVBox" type="VBoxContainer"]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -312.0
offset_right = 312.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(352, 824)
theme = SubResource("Theme_my3pc")
theme_override_constants/separation = 16
alignment = 1
script = ExtResource("1_fkcod")

[node name="FPSToggle" type="Button" parent="."]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_pb2un")
toggle_mode = true
text = "KEY_FPS"

[node name="BlurToggle" type="Button" parent="."]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_pb2un")
theme_override_font_sizes/font_size = 65
toggle_mode = true
text = "KEY_BLUR"

[node name="Label" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("3_pisyp")
theme_override_font_sizes/font_size = 65
text = "KEY_SENSITIVITY"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Sensitivity slider" type="HSlider" parent="."]
layout_mode = 2
theme = ExtResource("3_pisyp")
min_value = 6.0
max_value = 16.0
value = 11.0
rounded = true

[connection signal="pressed" from="FPSToggle" to="." method="_on_fps_toggle_pressed"]
[connection signal="pressed" from="BlurToggle" to="." method="_on_blur_toggle_pressed"]
[connection signal="drag_ended" from="Sensitivity slider" to="." method="_on_sensitivity_slider_drag_ended"]
